feat: add support for custom OpenAI base URL

--- a/apps/web/.env.example
+++ b/apps/web/.env.example
@@ -60,6 +60,7 @@ NEXT_PUBLIC_BYPASS_PREMIUM_CHECKS=true
 # ECONOMY_LLM_PROVIDER=openai
 # ECONOMY_LLM_MODEL=gpt-5-mini
 # OPENAI_API_KEY=
+# OPENAI_API_BASE=
 # OPENAI_ZERO_DATA_RETENTION=
 
 # --- Google Vertex ---
